@@ -23,9 +23,10 @@ EOT
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 WriteMakefile(
-    'NAME'		=> 'MusicBrainz::Client',
-    'VERSION_FROM'	=> 'Client.pm', # finds $VERSION
-    'PREREQ_PM'		=> {"MusicBrainz::Queries" => 0.01 }, 
+    'NAME'              => 'MusicBrainz::Client',
+    'VERSION_FROM'      => 'Client.pm', # finds $VERSION
+    'PREREQ_PM'	        => {'MusicBrainz::Queries' => 0.01,
+                            'Test::More'           => 0 }, 
     ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM => 'Client.pm', # retrieve abstract from module
        AUTHOR     => 'Sander van Zoest <svanzoest@cpan.org>') : ()),
