@@ -4,7 +4,7 @@ MusicBrainz::Client
 This module provides access to the libmusicbrainz client library from
 perl.
 
-For more information about the Music Brainz project visit the projects
+For more information about the MusicBrainz project visit the projects
 website at http://www.musicbrainz.org/
 
 
